--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,7 @@
     }
    ],
    "source": [
-    "pd.plottin"
+    "pd.plotting.scatter_matrix()"
    ]
   },
   {
@@ -1879,10 +1879,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boston_features.drop('NOX', axis=1, inplace=True)"
+   ]
   },
   {
    "cell_type": "markdown",
